// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header components renders a logo and a navigation button on small screen 1`] = `
<header>
  <Wrapper
    name="header"
  >
    <div
      className="header__logo"
    >
      <img
        alt="Omnifood logo"
        className="logo"
        src="logo-white.png"
      />
    </div>
    <nav
      className="nav__compactmenu"
    >
      <a
        className="compactmenu__link"
        href=""
        onClick={[Function]}
      >
        <Icon
          name="category"
        />
      </a>
      <Modal
        contentLabel="CategoryNavigationModal Menu"
        displayMode="smallScreen"
        isOpen={false}
        onRequestClose={[Function]}
      >
        <ModalHeader
          closeButtonTitle="Close modal"
          onRequestClose={[Function]}
        >
          Menu
        </ModalHeader>
        <div
          className="modal__body"
        >
          <ul>
            <li>
              <a
                className="nav__link"
                href="#features"
              >
                Food delivery
              </a>
            </li>
            <li>
              <a
                className="nav__link"
                href="#works"
              >
                How it works
              </a>
            </li>
            <li>
              <a
                className="nav__link"
                href="#cities"
              >
                Our cities
              </a>
            </li>
            <li>
              <a
                className="nav__link"
                href="#plans"
              >
                Sign up
              </a>
            </li>
          </ul>
        </div>
      </Modal>
    </nav>
  </Wrapper>
</header>
`;

exports[`Header components renders a logo and normal navigation on medium up screen 1`] = `
<header>
  <Wrapper
    name="header"
  >
    <div
      className="header__logo"
    >
      <img
        alt="Omnifood logo"
        className="logo"
        src="logo-white.png"
      />
    </div>
    <nav
      className="nav__links"
    >
      <a
        className="nav__link"
        href="#features"
      >
        Food delivery
      </a>
      <a
        className="nav__link"
        href="#works"
      >
        How it works
      </a>
      <a
        className="nav__link"
        href="#cities"
      >
        Our cities
      </a>
      <a
        className="nav__link"
        href="#plans"
      >
        Sign up
      </a>
    </nav>
  </Wrapper>
</header>
`;
